--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <!-- Custom styles -->
+    <!--- Custom styles -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
@@ -34,7 +34,9 @@
               <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+              <a class="header-link header-current link" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="header-item">
               <a class="header-link link" href="#">Contacts</a>
@@ -60,6 +62,7 @@
 
     <main>
       <!------------ Portfolio section ---------->
+
       <!-- menu -->
       <section class="picture">
         <div class="container">
@@ -89,12 +92,20 @@
                 class="portfolio-link link"
                 href="./images/portfolio/banking-app-interface-concept1.jpg"
               >
-                <img
-                  src="./images/portfolio/banking-app-interface-concept1.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-box-overlay">
+                  <img
+                    src="./images/portfolio/banking-app-interface-concept1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-wrapper">
                   <h2 class="title-box">Banking App Interface Concept</h2>
                   <p class="picture-txt">App</p>
@@ -107,12 +118,19 @@
                 class="portfolio-link link"
                 href="./images/portfolio/cashless-payment2.jpg"
               >
-                <img
-                  src="./images/portfolio/cashless-payment2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-box-overlay">
+                  <img
+                    src="./images/portfolio/cashless-payment2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="title-box">Cashless Payment</h2>
                   <p class="picture-txt">Marketing</p>
@@ -125,12 +143,19 @@
                 class="portfolio-link link"
                 href="./images/portfolio/meditaion-app3.jpg"
               >
-                <img
-                  src="./images/portfolio/meditaion-app3.jpg"
-                  alt="Meditaion App"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-box-overlay">
+                  <img
+                    src="./images/portfolio/meditaion-app3.jpg"
+                    alt="Meditaion App"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="title-box">Meditaion App</h2>
                   <p class="picture-txt">App</p>
@@ -143,12 +168,19 @@
                 class="portfolio-link link"
                 href="./images/portfolio/taxi-service4.jpg"
               >
-                <img
-                  src="./images/portfolio/taxi-service4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-box-overlay">
+                  <img
+                    src="./images/portfolio/taxi-service4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="title-box">Taxi Service</h2>
                   <p class="picture-txt">Marketing</p>
@@ -161,12 +193,19 @@
                 class="portfolio-link link"
                 href="./images/portfolio/screen-illustrations5.jpg"
               >
-                <img
-                  src="./images/portfolio/screen-illustrations5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-box-overlay">
+                  <img
+                    src="./images/portfolio/screen-illustrations5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="title-box">Screen Illustrations</h2>
                   <p class="picture-txt">Design</p>
@@ -179,12 +218,19 @@
                 class="portfolio-link link"
                 href="./images/portfolio/online-courses6.jpg"
               >
-                <img
-                  src="./images/portfolio/online-courses6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-box-overlay">
+                  <img
+                    src="./images/portfolio/online-courses6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="title-box">Online Courses</h2>
                   <p class="picture-txt">Marketing</p>
@@ -197,12 +243,19 @@
                 class="portfolio-link link"
                 href="./images/portfolio/instagram-stories-concept7.jpg"
               >
-                <img
-                  src="./images/portfolio/instagram-stories-concept7.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-box-overlay">
+                  <img
+                    src="./images/portfolio/instagram-stories-concept7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="title-box">Instagram Stories Concept</h2>
                   <p class="picture-txt">Design</p>
@@ -215,12 +268,19 @@
                 class="portfolio-link link"
                 href="./images/portfolio/organic-food8.jpg"
               >
-                <img
-                  src="./images/portfolio/organic-food8.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-box-overlay">
+                  <img
+                    src="./images/portfolio/organic-food8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="title-box">Organic Food</h2>
                   <p class="picture-txt">Web Site</p>
@@ -233,12 +293,19 @@
                 class="portfolio-link link"
                 href="./images/portfolio/fresh-coffee9.jpg"
               >
-                <img
-                  src="./images/portfolio/fresh-coffee9.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-box-overlay">
+                  <img
+                    src="./images/portfolio/fresh-coffee9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="title-box">Fresh Coffee</h2>
                   <p class="picture-txt">Web Site</p>
